[package]
name = "event_loop_poc_coinswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
epoll = "4.3.3"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
