[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
async-task = "4.7.0"
flume = "0.11.0"
futures-lite = "2.3.0"
once_cell = "1.19.0"
hyper = { version = "0.14.26", features = ["http1","http2","client","runtime"]}
smol = "1.3.0"
anyhow = "1.0.70"
async-native-tls = "0.5.0"
http = "0.2.9"
tokio = "1.14.0"
