[package]
name = "rust_wd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
warp = "0.3.6"
log = "0.4"
handle-errors = { path = "handle-errors" }
env_logger = "0.9"