[package]
name = "tokio-aio"
version = "0.1.0"
edition = "2021"


[lib]
name = "tokio_aio_examples"
path = "src/lib.rs"

[[bin]]
name = "echo-select"
path = "src/bin/echo-select.rs"

[[bin]]
name = "echo-epoll-edge"
path = "src/bin/echo-epoll-edge.rs"

[[bin]]
name = "echo-epoll-level"
path = "src/bin/echo-epoll-level.rs"


[dependencies]
nix = { version = "0.9.0" }
mio = "0.6.10"
futures = "0.1.17"
tokio-core = "0.1.10"