[package]
name = "tokio-aio"
version = "0.1.0"
edition = "2021"


[lib]
name = "tokio_aio_examples"
path = "src/lib.rs"

[[bin]]
name = "echo-select"
path = "src/bin/echo-select.rs"

[[bin]]
name = "echo-epoll-edge"
path = "src/bin/echo-epoll-edge.rs"

[[bin]]
name = "echo-epoll-level"
path = "src/bin/echo-epoll-level.rs"

[[bin]]
name = "echo-mio-level"
path = "src/bin/echo-mio-level.rs"

[[bin]]
name = "echo-mio-edge"
path = "src/bin/echo-mio-edge.rs"

[[bin]]
name = "echo-tokio"
path = "src/bin/echo-tokio.rs"


[[bin]]
name = "echo-tokio-mpsc"
path = "src/bin/echo-tokio-mpsc.rs"

[[bin]]
name = "mio-empty"
path = "src/bin/mio-empty.rs"

[[bin]]
name = "mio-mixed"
path = "src/bin/mio-mixed.rs"



[dependencies]
nix = { version = "0.9.0" }
mio = "0.6.10"
futures = "0.1.17"
tokio-core = "0.1.10"